Removing warnings